# NaomiCore

./: .gitignore  CMakeLists.txt  FIX.txt  PreLoad.cmake  README.md  revision_data.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: AutoCollect.cmake  CheckBuildDir.cmake  ConfigureBaseTargets.cmake  ConfigureScripts.cmake  FindMySQL.cmake  FindPCHSupport.cmake  FindReadline.cmake  GroupSources.cmake
contrib/: enumutils_describe.py  extractor.bat  extractor.sh
contrib/Docker/: Dockerfile  README.md
contrib/conf_merge/: README  merge.php  tc-conf-merger.pl
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: CMakeLists.txt
dep/argon2/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/fmt/: CMakeLists.txt  README.rst
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt  tc_upgrades.txt
dep/jemalloc/: CMakeLists.txt  Configure.c
dep/libmpq/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/readline/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt  recastnavigation.diff
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/short_alloc/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
dep/valgrind/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/base/: auth_database.sql
sql/create/: create_mysql.sql
sql/old/3.1.3/: 05670_realmd_uptime.sql
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  (+4 more)
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: AuthServer.conf.dist  CMakeLists.txt  Main.cpp  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/PrecompiledHeaders/: authPCH.h
src/server/authserver/Server/: AuthSession.cpp  AuthSession.h  AuthSocketMgr.h
src/tools/: CMakeLists.txt
tests/: CMakeLists.txt  DummyData.cpp  DummyData.h  main.cpp  tc_catch2.h
tests/common/: Config.cpp  EventMap.cpp  FlatSet.cpp  StringConvert.cpp  Timer.cpp  UniqueTrackablePtr.cpp
tests/game/: ChatCommand.cpp  Hyperlinks.cpp  ThreatListIterator.cpp
(+1542 files in other folders)
